# tauri-template

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SUPERPOWERS_LOG.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.ai/recipes/: add-feature.md  add-navigation-page.md  add-runtime-module.md  add-theme.md  remove-feature.md
examples/minimal-runtime-module/: AGENTS.md  index.js  manifest.json
openspec/changes/runtime-module-native-capabilities-v1/: tasks.md
scripts/: package-runtime-module.mjs  version.mjs  version.test.mjs
src/: App.tsx  main.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/: logging.rs  mod.rs
src-tauri/src/features/native_capabilities/: clipboard.rs  filesystem.rs  http_proxy.rs  mod.rs  notifications.rs  permissions.rs  process.rs  registry.rs  runtime.rs  session.rs  shortcuts.rs  tray.rs
src-tauri/src/features/runtime_modules/: data_portability.rs  database.rs  manifest.rs  mod.rs  plan.rs  repository.rs  resolver.rs  store.rs  types.rs
src/app/: feature-registry.ts  module-registry.ts  navigation-state.test.ts  navigation-state.ts
src/components/ui/: AGENTS.md  card.tsx  (+8 more)
src/features/: AGENTS.md
src/pages/: module-manager-page.tsx  settings-page.tsx  shortcut-recorder-dialog.test.tsx  shortcut-recorder-dialog.tsx
src/styles/: globals.css
src/test/: setup.ts
src/themes/: AGENTS.md  theme-controls.tsx  theme-provider.tsx  theme-registry.ts  theme-store.test.ts  theme-store.ts  theme-types.ts
(+170 files in other folders)
