[package]
name = "modular-tauri-template"
version = "0.2.0"
description = "A minimal modular Tauri desktop application template"
authors = []
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "modular_tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.9.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
log = "0.4.33"
semver = "1.0.28"
sha2 = "0.10.9"
getrandom = "0.3.4"
tempfile = "3.24.0"
url = "2.5.8"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
